# image-compress-tauri

./: .gitignore  AGENTS.md  CLAUDE.md  RECORD.md  UPDATE_LOG.md  install.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tsconfig.json  vite.config.ts
.github/workflow/: tauri.yml
.github/workflow1/: tauri.yml
.github/workflows/: tauri.yml
key/: myapp.key  myapp.key.pub
scripts/: release.mjs  updatelog.mjs  updater.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  prop.rs
src-tauri/src/compress/: index.rs  mod.rs  png.rs  webp.rs
src-tauri/src/compress/core/: png.rs  webp.rs
src-tauri/src/compress/core/jpeg/: test.rs
src-tauri/src/compress/core/jpeg/lib_mozjpeg_sys/: common.rs  index.rs  lossless.rs  lossy.rs  mod.rs
src-tauri/src/compress/core/png/: lossless.rs  lossy.rs
src-tauri/src/compress/jpeg/: lib_mozjpeg_sys.rs
src-tauri/src/constant/: error.rs
src-tauri/src/shared/: mod.rs
src-tauri/src/utils/: cookie.rs  debug.rs  mod.rs  pool.rs
src-tauri/src/utils/log/: tracing.rs
src-tauri/src/window/: manage.rs  mod.rs  setup.rs
src-tauri/src/window/command/: custom.rs  drag.rs  js2rs.rs  mod.rs  splash.rs
src-tauri/src/window/event/: index.rs  mod.rs  rs2js.rs
src-tauri/src/window/menu/: custom.rs  event.rs  index.rs  mod.rs  native.rs
src-tauri/src/window/tray/: index.rs
src/components/icons/: index.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dropzone.tsx  glass.tsx  index.ts  input.tsx  progress.tsx  slider.tsx  titlebar.tsx  tooltip.tsx
src/css/base/: base.scss
src/css/device/: device.mixin.scss
src/css/var/: box.scss  button.scss  index.scss  input.scss
src/layout/: default.tsx  defaylt.module.scss
src/pages/compress/: index.module.scss  index.tsx  scrollbar.scss
src/pages/demo/: index.module.scss  index.tsx
src/pages/error/: index.tsx
src/pages/home/: index.module.scss  index.tsx  scrollbar.scss  var.scss
src/pages/splash/: index.module.scss  index.tsx
src/router/: index.tsx
src/typings/: compress.d.ts
src/utils/: file.ts  update.ts  window-top.ts
